# dual_arm_with_electric

./: .gitignore  README.md
src/: simplify_stl.py
src/dual_arm_agv/: CMakeLists.txt  package.xml
src/dual_arm_agv/config/: joint_names_dual_arm_agv.yaml
src/dual_arm_agv/launch/: display.launch  gazebo.launch
src/dual_arm_agv/meshes/: D60_Link.STL  D70_Link.STL  D80_Link.STL  D90_Link.STL  ca53_1_Link.STL  ca_Link.STL  lfd_Link.STL  lr52_1_Link.STL  lr52_2_Link.STL  lr52_3_Link.STL  lr52_4_Link.STL  lr52_5_Link.STL  lr52_6_Link.STL  lr_Link.STL  rbd_Link.STL  rl_Link.STL  rr51_1_Link.STL  rr51_2_Link.STL  rr51_3_Link.STL  rr51_4_Link.STL  rr51_5_Link.STL  rr_Link.STL
src/dual_arm_agv/meshes/0/: D60_Link.STL  lfd_Link.STL  lr52_2_Link.STL  lr52_4_Link.STL  lr52_6_Link.STL  rfd_Link.STL  rr51_1_Link.STL  rr51_2_Link.STL  rr51_3_Link.STL  rr51_4_Link.STL  rr_Link.STL
src/dual_arm_agv/urdf/: dual_arm_agv.csv  dual_arm_agv.urdf
src/dual_arm_agv/urdf/dual_arm_agv/: dual_arm_agv.usd
src/dual_arm_agv/urdf/dual_arm_agv/configuration/: dual_arm_agv_physics.usd  dual_arm_agv_sensor.usd
src/dual_arm_agv_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_arm_agv_moveit/config/: dual_arm_agv.ros2_control.xacro  dual_arm_agv.srdf  dual_arm_agv.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/dual_arm_agv_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/dual_arm_agv_moveit/scripts/: visualize_workspace.py
src/dual_arm_agv_moveit/src/: Readme find min z universal.md  Readme global min z finder.md  arm_move_service.cpp  find_min_z_position.cpp  find_min_z_universal.cpp  global_min_z_finder.cpp  planning_diagnostic.cpp
src/dual_arm_agv_moveit/srv/: MoveArm.srv  MoveArmCartesian.srv
src/dual_arm_with_electric/: CMakeLists.txt  package.xml
src/dual_arm_with_electric/meshes/: L_R00_Link.STL  L_R01_Link.STL  L_R02_Link.STL  L_R03_Link.STL  L_R04_Link.STL  L_R05_Link.STL  L_R06_Link.STL  R_R00_Link.STL  R_R01_Link.STL  R_R02_Link.STL  R_R03_Link.STL  R_R04_Link.STL  R_R05_Link.STL  base_link.STL  electric_driver_link.STL
src/dual_arm_with_electric/urdf/: ROBOT1010.urdf  ROBOT1111.urdf  dual_arm_with_electric.csv  dual_arm_with_electric.urdf
src/dual_arm_with_electric/urdf/dual_arm_with_electric/: dual_arm_with_electric.usd
src/dual_arm_with_electric/urdf/dual_arm_with_electric/configuration/: dual_arm_with_electric_physics.usd  dual_arm_with_electric_sensor.usd
src/dual_arm_with_electric_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_arm_with_electric_moveit/config/: dual_arm_with_electric.ros2_control.xacro  dual_arm_with_electric.srdf  dual_arm_with_electric.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/dual_arm_with_electric_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/dual_arm_with_electric_moveit/src/: arm_move_service.cpp  arm_move_service_ikfast.cpp  move_right_arm.cpp
src/usd/: dual_arm_agv.usd  dual_arm_with_electric.usd
